UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Bid_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Direct_Kroger__c</fullName>
        <label>Direct Kroger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Order_Price1__c</fullName>
        <label>Direct Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Order_Price__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Direct_Order_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Order Price (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Rx_Outreach__c</fullName>
        <label>Direct Rx Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Supervalu__c</fullName>
        <label>Direct Supervalu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_TP_In__c</fullName>
        <formula>IF(OR(ISNULL(Phoenix_Direct_Dead_Net__c ),Phoenix_Direct_Dead_Net__c =0),0,
(Phoenix_Direct_Dead_Net__c - Phoenix_Throughput_Cost1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct TP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_TP__c</fullName>
        <formula>IF(Phoenix_Direct_Dead_Net__c &gt; 0 , (Phoenix_Direct_Dead_Net__c - Phoenix_Throughput_cost__c) /Phoenix_Direct_Dead_Net__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct TP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dollars_based_on_Budgeted_ASP__c</fullName>
        <formula>Phoenix_Budgeted_ASP1__c *  Phoenix_Final_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dollars based on Budgeted ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Doses__c</fullName>
        <formula>Phoenix_Total_Selling_Unit__c * Phoenix_Pkg_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Estimated_Lead_Time_Days__c</fullName>
        <label>Estimated Lead Time (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Estimated_Medicaid_Returns1__c</fullName>
        <formula>( Phoenix_Product__r.Phoenix_Medicaid_Per_Unit__c +  Phoenix_Product__r.Phoenix_Return_Per_Unit__c )*  Phoenix_Final_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Medicaid &amp; Returns(Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Estimated_Medicaid_Returns__c</fullName>
        <label>Estimated Medicaid &amp; Returns</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Expiry_Date__c</fullName>
        <description>This is used in &quot;OTB&quot; process.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_G_N__c</fullName>
        <label>Fee (G/N)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Annual_Extended_Units__c</fullName>
        <formula>Phoenix_Final_Total_Selling_Unit__c  *  Phoenix_Pkg_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Annual  Extended  Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Approval_Approval_Grid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval (Approval Grid)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Approvd_Pricing_Contracts__c</fullName>
        <formula>IF( Phoenix_ProposedContractBidPriceMktng__c =0		,Phoenix_ProposedContract_Bid_Price_Sales__c
,Phoenix_ProposedContractBidPriceMktng__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Appvd Pricing (Contr Internal Use)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Approved_Pricing_Contracts__c</fullName>
        <label>Final Approved Pricing (Contracts)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Direct_Selling_Units_Calc__c</fullName>
        <label>Final Direct Selling Units Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Direct_Selling_Units__c</fullName>
        <formula>Phoenix_Final_Direct_Selling_Units_Calc__c</formula>
        <label>Final Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Finance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Finance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Indirect_Selling_Units_Cal__c</fullName>
        <label>Final Indirect Selling Units Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Indirect_Selling_Units__c</fullName>
        <formula>Phoenix_Final_Indirect_Selling_Units_Cal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Total_Selling_Unit__c</fullName>
        <formula>Phoenix_Final_Indirect_Selling_Units__c +  Phoenix_Final_Direct_Selling_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Gross_Contract_Sales__c</fullName>
        <formula>IF(  Phoenix_Final_Approvd_Pricing_Contracts__c =0,IF(Phoenix_Current_Direct_Price__c =0,  Phoenix_Current_Indirect_Price__c  ,  Phoenix_Current_Direct_Price__c ), Phoenix_Final_Approvd_Pricing_Contracts__c )*  Phoenix_Final_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Contract Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Gross_sales__c</fullName>
        <formula>Phoenix_Proposed_IPA_Price__c * Phoenix_IDN_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Guidance_Price__c</fullName>
        <label>Guidance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_IDN_Usage__c</fullName>
        <label>IDN Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_IMS_Market_Share__c</fullName>
        <label>IMS Market Share</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_INDIRECT_CD__c</fullName>
        <formula>Phoenix_WAC__c * IF( AND(Phoenix_Bid_Template_Refrence__c = &apos;Indirect&apos;, ISPICKVAL(Phoenix_Bid__r.Phoenix_Bid_Type__c , &apos;New Customer&apos;)),IF(Phoenix_Indirect_CD_Per__c &gt; 0 , Phoenix_Indirect_CD_Per__c, Phoenix_Bid__r.Phoenix_Proposed_Cash_Terms__c) ,Phoenix_Indirect_CD_Per__c)</formula>
        <label>INDIRECT CD $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_INDIRECT_RDC_NLC__c</fullName>
        <formula>Phoenix_WAC__c *   Phoenix_RDC_NLC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INDIRECT RDC/NLC $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_IOD_Per_Unit_in__c</fullName>
        <formula>IF( 

ISPICKVAL( Phoenix_Bid__r.Phoenix_Initial_Order_Discount_Type__c , &quot;WAC&quot;) 
,

(
Phoenix_WAC__c
*Phoenix_Bid__r.Phoenix_Proposed_Initial_Order_Discount__c
)
,
IF(ISPICKVAL( Phoenix_Bid__r.Phoenix_Initial_Order_Discount_Type__c , &quot;Contract&quot;)
,
( IF( Phoenix_Bid_Template_Refrence__c =&apos;Direct and Indirect&apos;,IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 ,Phoenix_Current_Direct_Price__c ,Phoenix_Final_Approvd_Pricing_Contracts__c  ), Phoenix_Current_Price_Calc__c) 
*Phoenix_Bid__r.Phoenix_Proposed_Initial_Order_Discount__c
)
,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOD Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_IOD_Qty__c</fullName>
        <formula>IF( OR(Phoenix_Bid__r.Phoenix_Initial_Order_Discount_of_Days__c = 0,Phoenix_MOQ1__c =0) ,0,
IF((((Phoenix_Bid__r.Phoenix_Initial_Order_Discount_of_Days__c / 30)*(Phoenix_Final_Total_Selling_Unit__c/12)) /  Phoenix_MOQ1__c) &lt; 1  , 1* Phoenix_MOQ1__c, CEILING(((Phoenix_Bid__r.Phoenix_Initial_Order_Discount_of_Days__c / 30)*(Phoenix_Final_Total_Selling_Unit__c/12)) /  Phoenix_MOQ1__c )* Phoenix_MOQ1__c )
  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOD Qty (rounded to MOQ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_IOD_Total_Amount__c</fullName>
        <label>IOD Total Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_IPA_Floor_Price1__c</fullName>
        <label>IPA Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_IPA_Floor_Price__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_IPA_Floor_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPA Floor Price (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Accerodo__c</fullName>
        <label>Indirect Accerodo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_CD_Per__c</fullName>
        <label>Indirect CD %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Cigna__c</fullName>
        <label>Indirect Cigna</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Cordant__c</fullName>
        <label>Indirect Cordant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Dead_Net__c</fullName>
        <label>Indirect Dead Net</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Dead_Net_w_o_Med_Retrns__c</fullName>
        <label>Indirect Dead Net w/o Medicaid &amp; Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Deadnet__c</fullName>
        <formula>Phoenix_Wholesaler_Diff_Price_Indirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Deadnet(Internal Use)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_ESI__c</fullName>
        <label>Indirect ESI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Kroger__c</fullName>
        <label>Indirect Kroger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Rx_Outreach__c</fullName>
        <label>Indirect Rx Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Supervalu__c</fullName>
        <label>Indirect Supervalu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_TP__c</fullName>
        <formula>IF(Phoenix_Indirect_Dead_Net__c &gt; 0 , ((  Phoenix_Indirect_Dead_Net__c -  Phoenix_Throughput_cost__c ) / Phoenix_Indirect_Dead_Net__c) , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect TP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Order_Discount_Type__c</fullName>
        <label>Initial Order Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Order_Discount__c</fullName>
        <formula>IF( ISPICKVAL(  Phoenix_Bid__r.Phoenix_Initial_Order_Discount_Type__c , &quot;WAC&quot;) ,((  Phoenix_Final_Total_Selling_Unit__c /12)/30*(  Phoenix_WAC__c  ))*    Phoenix_Bid__r.Phoenix_Proposed_Initial_Order_Discount__c  *    Phoenix_Bid__r.Phoenix_Initial_Order_Discount_of_Days__c  ,  Phoenix_Gross_Contract_Sales__c  /12/30* Phoenix_Bid__r.Phoenix_Proposed_Initial_Order_Discount__c  *    Phoenix_Bid__r.Phoenix_Initial_Order_Discount_of_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Order Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Stocking_Order_Comments__c</fullName>
        <label>Initial Stocking Order Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Stocking_Order_Volume__c</fullName>
        <label>Initial Stocking Order Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Internal_Dead_Net_Price__c</fullName>
        <label>Blended Internal Dead Net Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Invoice_Allowance_WMT_Direct_NCP__c</fullName>
        <label>Invoice Allowance (WMT Direct NCP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Invoice_Allowance__c</fullName>
        <label>Invoice Allowance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_IsOTCLeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOTCLeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_New_Low_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Low Triggered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Re_Bid_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Re Bid Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Rejection_Noti_All_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Rejection Notification to All Users Sent For This Item?</description>
        <inlineHelpText>Is Rejection Notification to All Users Sent For This Item?</inlineHelpText>
        <label>Is Rejection Noti. All Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Latest_Estimate__c</fullName>
        <description>Latest Estimate - LE Price Per Pack (Qtr)</description>
        <label>LE Price Per Pack (Qtr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Less_Cost__c</fullName>
        <formula>Phoenix_Throughput_cost__c *  IF(Phoenix_SCM_Final_Approval__c,Phoenix_Total_SCM_Approved_Qty__c ,Phoenix_Final_Total_Selling_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Less Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Line_Item_Current_Stage__c</fullName>
        <label>Line Item Current Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Finance Head</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vistex</fullName>
                </value>
                <value>
                    <fullName>Closed - Awarded</fullName>
                </value>
                <value>
                    <fullName>Closed - Other</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Line_Item_Rejected_Stage__c</fullName>
        <label>Line Item Rejected Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>- None</fullName>
                </value>
                <value>
                    <fullName>SCM</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Finance Head</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vistex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Local_VIP_Per_Unit__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 , Phoenix_Local_VIP__c * Phoenix_Current_Indirect_Price__c, Phoenix_Local_VIP__c * Phoenix_Final_Approvd_Pricing_Contracts__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local VIP Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Local_VIP__c</fullName>
        <label>Local VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lowest_Price_SKU1__c</fullName>
        <label>Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lowest_Price_SKU__c</fullName>
        <formula>Phoenix_Lowest_Price_SKU1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowest Price /SKU (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_MOQ1__c</fullName>
        <label>MOQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_MOQ__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Minimum_Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOQ (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_MarketingLead_Approver__c</fullName>
        <label>Phoenix_MarketingLead_Approver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_MarketingLead_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phoenix_MarketingLead_Final_Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approval__c</fullName>
        <label>Marketing Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approved__c</fullName>
        <label>Marketing Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_OTC__c</fullName>
        <label>Marketing Lead OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_Rx__c</fullName>
        <label>Marketing Lead Rx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_SRx__c</fullName>
        <label>Marketing Lead SRx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Notes__c</fullName>
        <label>Marketing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Medicaid_Returns_Per_Unit_in__c</fullName>
        <formula>Phoenix_Estimated_Medicaid_Returns__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medicaid &amp; Returns Per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Min_profit_share_Partner_11__c</fullName>
        <label>Min profit share - Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Min_profit_share_Partner_1__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Per_Unit_Profit_Partner_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min profit share-Partner 1(Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Min_profit_share_Partner_21__c</fullName>
        <label>Min profit share - Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_National_Drug_Code__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_NDC_11_Dashes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDC (Internal Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Without_Dashes__c</fullName>
        <label>NDC (Without Dashes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NLC__c</fullName>
        <label>Phoenix NLC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_afterRebates_after_VIP__c</fullName>
        <label>Net Price after  Rebates (after VIP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_after_Rebates_Terms__c</fullName>
        <label>Net Price after Rebates &amp; Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_after_RebatesbeforeVIP__c</fullName>
        <label>Net Price after Rebates (before VIP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales_External__c</fullName>
        <label>Net Sales  (External)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales_Internal__c</fullName>
        <label>Net Sales  (Internal)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Opportunities_Bidding__c</fullName>
        <label>New Opportunities Bidding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OneStop</fullName>
                </value>
                <value>
                    <fullName>RAD</fullName>
                </value>
                <value>
                    <fullName>OneStop And RAD</fullName>
                </value>
                <value>
                    <fullName>WMT</fullName>
                </value>
                <value>
                    <fullName>OneStop And WMT</fullName>
                </value>
                <value>
                    <fullName>RAD And WMT</fullName>
                </value>
                <value>
                    <fullName>OneStop And RAD And WMT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_New_Opportunities_Value__c</fullName>
        <label>New Opportunities Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_WAC__c</fullName>
        <label>New WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>